<?xml version="1.0"?>
<package format="2">
  <name>iexxx</name>
  <version>0.1.6</version>
  <description>The iexxx package contains a basic ROS driver for the OSIGHT IExxx line of LIDARs.</description>

  <author>Konrad Banachowicz</author>
  <maintainer email="mazihong@osighttech.com">Zihong Ma</maintainer>
  <url type="website">http://ros.org/wiki/IExxx</url>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>sensor_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>
</package>
