<?xml version="1.0"?>
<package format="2">
  <name>lsxxx</name>
  <version>0.1.6</version>
  <description>The lsxxx package contains a basic ROS driver for the OSIGHT LSxxx line of LIDARs.</description>

  <author>Konrad Banachowicz</author>
  <maintainer email="niulinquan@osighttech.com">Linquan Niu</maintainer>
  <url type="website">http://ros.org/wiki/LSxxx</url>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>sensor_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>
</package>
